<resources>
    <string name="app_name">Cashix</string>
    <string name="loginskip">Skip Login</string>
    <string name="send_otp_button_text">Send OTP</string>
    <string name="login_mobile_hint">00000 00000</string>
    <string name="accept_privacy_policy">accept privacy policy</string>
    <string name="let_s_begin_enter_your_number">Get Started with \nCashix</string>
    <string name="a_single_step_to_go">Enter the OTP we\'ve sent to</string>
    <string name="force_exit">Force Exit</string>
    <string name="continue_here">Continue</string>
    <string name="account_succesfully_created">Account Created Successfully</string>
    <string name="kyc_response">Later</string>
    <string name="kyc_response_complete_kyc">Complete Kyc</string>
    <string name="complete_yout_kyc_to_start_investing_quickly">Complete Your Kyc In Few Minuts </string>
    <string name="top_currencies">Top Currencies</string>
    <string name="see_all">SEE ALL</string>
    <string name="recent_views">Recent Views</string>
    <string name="begin_trading_line">Send Money Instantly From Your Credit Card &amp; Wallets To Your Bank Account With Lowest Fees</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">setting_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="id_number">ID Number optional</string>
    <string name="demoUserName">Gopal Meena</string>
    <string name="demoAc">A/C - 55456147</string>
    <string name="q"><![CDATA[<]]></string>
    <string name="paymentComplete">To complete the payment\nplease click on the procced button</string>
    <string name="read_more">READ MORE</string>
    <string name="last_four_transaction">LAST FOUR TRANSACTION</string>
    <string name="oops_no_internet">Oops No Internet</string>
    <string name="make_sure_wifi_and_cellular_data_is_turned_on_and_try_again">Make sure wifi and cellular data is turned\n On and try again</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="add_bank_account_for_recieving_payouts">Add Bank Account For Receiving Payouts</string>
    <string name="your_all_transaction_history">Your All Transaction History</string>
    <string name="add_or_manage_biller_s_for_rents">Add Or Manage Biller For Rent</string>
    <string name="ask_something_we_will_help_you">Ask Something We Will Help You</string>
    <string name="terms_and_condition_that_make_us_diffrent">Terms and Conditions That Make Us Diffrent</string>
    <string name="know_your_all_data_is_safe">Know How Your All Data Is Safe</string>
    <string name="tell_us_what_you_think">Tell Us What You Think</string>
    <string name="your_profile">Your Profile</string>
    <string name="complete_your_profile_for_instant_settlements">Complete Your Profile For Instant Settlement</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="title_activity_setting_pp">settingPP</string>
    <string name="bank_verification_success">Bank Verification Success</string>
    <string name="congrats_your_account_is_verified_succesfully_and_all_future_payout_will_be_credited_to_your_bank_account">Congrats! Your Account is Verified Successfully and All Future Payout Will be Credited to your bank account</string>
    <string name="pendinfg_bank">Pending! Your Bank Account is not Verified yet. we will inform you once get verified</string>
    <string name="enter_amount">enter amount</string>
    <string name="services">Cashix Services</string>
    <string name="recycler_top">Credit Cards</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="paying_to_account">Paying to Account</string>
    <string name="bank_heading">Credit Card To Bank</string>
    <string name="alert">Alert!</string>
    <string name="hello_world_how_are_you_today">hello world how are you today?</string>
    <string name="okay">okay</string>
    <string name="pay_your_rent_with_credit_card">Pay Your Rent With Credit Card</string>
    <string name="enter_your_mobile_number_to_login_or_signup">Enter your mobile number to login or signup</string>
    <string name="hi_there">Hi there,</string>
    <string name="how_much_amount_do_you_want_to_transfer">how much amount do you want to transfer?</string>
    <string name="pay_with_credit_card">pay with credit card</string>
    <string name="select_payment_method">select payment method</string>
    <string name="update_profile">"Edit Profile"</string>
    <string name="save_profile">"Save Profile"</string>
</resources>