<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/active"
        android:visibility="visible"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:letterSpacing="0.11"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/dialogText"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_how_are_you_today"
            android:lineHeight="20dp" />
        <LinearLayout
            android:paddingBottom="5dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonConfirm"
                android:background="@drawable/button_shape_primary"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:text="@string/okay"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>