<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/limeWhite"
    android:orientation="vertical"
    android:overScrollMode="never">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/headingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <TextView
                    android:id="@+id/ForceExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="Card to bank"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_op_left" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/headingLayout"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="start|bottom"
                            android:text="@string/how_much_amount_do_you_want_to_transfer"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="end">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/how_much_money" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameProfile"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="start"
                        android:hint="@string/enter_amount"
                        android:padding="0dp"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="0.5dp"
                        app:boxStrokeWidthFocused="0.5dp"
                        app:hintTextColor="@color/black"
                        app:startIconDrawable="@drawable/ic_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bankName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:maxLength="9"
                            android:inputType="number"
                            android:layout_marginTop="2dp"
                            android:drawablePadding="0dp"
                            android:gravity="center|start" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:text="@string/pay_with_credit_card"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>